force-app/main/default/objects/Triggered_SMS_Handler__c/Triggered_SMS_Handler__c.object-meta.xml
<CustomObject>
    <description>User by SMS 360 for sending SMS using service account</description>
    <label>Triggered SMS Handler</label>
    <nameField>
        <displayFormat>TSMS-{000000}</displayFormat>
        <label>Triggered SMS Handler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triggered SMS Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>