force-app/main/default/objects/Triggered_SMS_Handler__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Triggered SMS Handlers</relationshipLabel>
    <relationshipName>Triggered_SMS_Handlers</relationshipName>
    <type>Lookup</type>
</CustomField>