force-app/main/default/objects/Triggered_SMS_Handler__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Triggered SMS Handlers</relationshipLabel>
    <relationshipName>Triggered_SMS_Handlers</relationshipName>
    <type>Lookup</type>
</CustomField>