force-app/main/default/objects/Triggered_SMS_Handler__c/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <label>MobileNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>