force-app/main/default/objects/Triggered_SMS_Handler__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Generic RecordId used to send SMS to any object</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>