force-app/main/default/objects/Triggered_SMS_Handler__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>