force-app/main/default/objects/Triggered_SMS_Handler__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsSent__c</columns>
    <columns>Job__c</columns>
    <columns>Contact__c</columns>
    <columns>MobileNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>