force-app/main/default/objects/Triggered_SMS_Handler__c/listViews/Pending_SMS_Messages.listView-meta.xml
<ListView>
    <fullName>Pending_SMS_Messages</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>Contact__c</columns>
    <columns>MobileNumber__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsSent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsSent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending SMS Messages</label>
    <sharedTo>
        <group>Customer_Service</group>
    </sharedTo>
</ListView>